<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportAddFragment">

    <TextView
        android:id="@+id/AddReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/add_report"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        />
    <LinearLayout
        android:layout_below="@+id/AddReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ReportName"
            android:layout_below="@+id/AddReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_report_name"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_report_name"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/ReportDesc"
            android:layout_below="@+id/AddReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/new_report_description"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_report_description"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <Button
        android:id="@+id/changeLanguageBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_primary"
        android:textColor="@color/colorWhite"
        android:text="@string/new_report_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:clickable="true"
        />




</RelativeLayout>