<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/notifImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_round_new_releases_24"
            />

        <TextView
            android:id="@+id/notifTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notifImage"
            android:layout_toRightOf="@id/notifImage"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:textColor="#005575"
            android:textStyle="bold"
            android:text="@string/notification_name"
            />

        <TextView
            android:id="@+id/notifDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notifImage"
            android:layout_toRightOf="@id/notifImage"
            android:layout_below="@id/notifTitle"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textColor="#000000"
            android:text="@string/notification_description"
            />

        <TextView
            android:id="@+id/notifDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/notifImage"
            android:layout_toRightOf="@id/notifImage"
            android:layout_below="@id/notifDesc"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="2dp"
            android:textSize="8sp"
            android:textColor="#000000"
            android:text="@string/notification_date"
            />

    </RelativeLayout>


</androidx.cardview.widget.CardView>